--- a/dom/template-v6.html
+++ b/dom/template-v6.html
@@ -1,20 +1,28 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+
 <div id="app">
   <p>{{ titulo }}</p>
   <p>{{ saudacao() }}</p>
-  //diretiva v-bind liga o que está na instância view e um atributo da sua tag do tamplete
   <a v-bind:href="link">google</a>
+  <hr>
+  <p v-html="linkHtml">Google</p>
+  //proteção contra xss, não passando informações internas do site 
+  <p>{{ linkHtml}}</p>
 </div>
+
+
 <script>
   new Vue({
     el: "#app",
     data: {
       titulo: 'Usando vuejs!',
-      link: 'http://google.com.br'
+      link: 'http://google.com.br',
+      linkHtml: '<a href="https://google.com">Google</a>'
     },
     methods: {
       saudacao: function(){
-        console.log(this)
+        this.titulo = 'Bom dia!!'
         //fazendo um proxy 
         return this.titulo
       }
