--- a/introducao/primeira-app-v1.html
+++ b/introducao/primeira-app-v1.html
@@ -1,4 +1,4 @@
-<script src="https://cnd.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
 <div id="app">
   <input type="text" v-on:input="alterarTitulo">
